day 43: add GC algorithms and tuning flags